--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 /toolbox-0.0.99.tar.xz
 /toolbox-0.0.99.1.tar.xz
 /toolbox-0.0.99.2.tar.xz
+/toolbox-0.0.99.2-1.git9820550c82bb.tar.xz
+/toolbox-0.0.99.2^1.git9820550c82bb.tar.xz
