Updated to 0.0.99.2^2.git40fbd377ed0b snapshot

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /toolbox-0.0.99.2.tar.xz
 /toolbox-0.0.99.2-1.git9820550c82bb.tar.xz
 /toolbox-0.0.99.2^1.git9820550c82bb.tar.xz
+/toolbox-0.0.99.2^2.git40fbd377ed0b.tar.xz
