--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /toolbox-0.0.99.2^1.git9820550c82bb.tar.xz
 /toolbox-0.0.99.2^2.git40fbd377ed0b.tar.xz
 /toolbox-0.0.99.2^3.git075b9a8d2779.tar.xz
+/toolbox-0.0.99.3.tar.xz
