--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -41,7 +41,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "${{ home }}/rpmbuild/SRPMS/toolbox-0.1.00.0-8.fc36.src.rpm"
+          asset_path: "/github/home/rpmbuild/SRPMS/toolbox-0.1.00.0-8.fc36.src.rpm"
           asset_name: "toolbox-0.1.00.0-8.fc36.src.rpm"
           asset_content_type: "application/octet-stream"
       - name: upload rpm files to releases page
@@ -50,6 +50,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "${{ home }}/rpmbuild/RPMS/x86_64/toolbox-0.1.00.0-8.fc36.x86_64.rpm"
+          asset_path: "/github/home/rpmbuild/RPMS/x86_64/toolbox-0.1.00.0-8.fc36.x86_64.rpm"
           asset_name: "toolbox-0.1.00.0-8.fc36.x86_64.rpm"
           asset_content_type: "application/octet-stream"
