--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os_version: [36]
+        os_version: [36, 37]
     container:
       image: fedora:${{ matrix.os_version }}
     steps:
