--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -9,20 +9,10 @@ on:
       - "ci/**"
 
 jobs:
-  build:
-    name: build rpm packages
+  create_release:
+    name: create github release
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os_version: [36, 37]
-    container:
-      image: fedora:${{ matrix.os_version }}
     steps:
-      - uses: actions/checkout@v2
-      - name: install go-srpm-macros and builddep
-        run: dnf install -y /usr/bin/rpmbuild go-srpm-macros 'dnf-command(builddep)' podman
-      - name: install build dependencies
-        run: ./ci/build.sh 0.1.00.0
       - name: create github release
         uses: actions/create-release@v1
         id: create_release
@@ -35,12 +25,29 @@ jobs:
             testing release
           draft: false
           prerelease: true
+    outputs:
+      github_release: ${{ steps.create_release.outputs }}
+  build:
+    name: build rpm packages
+    runs-on: ubuntu-latest
+    needs: create_release
+    strategy:
+      matrix:
+        os_version: [36, 37]
+    container:
+      image: fedora:${{ matrix.os_version }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: install go-srpm-macros and builddep
+        run: dnf install -y /usr/bin/rpmbuild go-srpm-macros 'dnf-command(builddep)' podman
+      - name: install build dependencies
+        run: ./ci/build.sh 0.1.00.0
       - name: upload srpm file to releases page
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.github_release.upload_url }}
           asset_path: "/github/home/rpmbuild/SRPMS/toolbox-0.1.00.0-8.fc36.src.rpm"
           asset_name: "toolbox-0.1.00.0-8.fc36.src.rpm"
           asset_content_type: "application/octet-stream"
@@ -49,7 +56,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.github_release.upload_url }}
           asset_path: "/github/home/rpmbuild/RPMS/x86_64/toolbox-0.1.00.0-8.fc36.x86_64.rpm"
           asset_name: "toolbox-0.1.00.0-8.fc36.x86_64.rpm"
           asset_content_type: "application/octet-stream"
