--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -26,7 +26,7 @@ jobs:
           draft: false
           prerelease: true
     outputs:
-      github_release: ${{ steps.create_release.outputs }}
+      github_release: ${{ steps.create_release.outputs.upload_url }}
   build:
     name: build rpm packages
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-          upload_url: ${{ needs.create_release.outputs.github_release.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.github_release }}
           asset_path: "/github/home/rpmbuild/SRPMS/toolbox-0.1.00.0-8.fc36.src.rpm"
           asset_name: "toolbox-0.1.00.0-8.fc36.src.rpm"
           asset_content_type: "application/octet-stream"
@@ -56,7 +56,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
-          upload_url: ${{ needs.create_release.outputs.github_release.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.github_release }}
           asset_path: "/github/home/rpmbuild/RPMS/x86_64/toolbox-0.1.00.0-8.fc36.x86_64.rpm"
           asset_name: "toolbox-0.1.00.0-8.fc36.x86_64.rpm"
           asset_content_type: "application/octet-stream"
